--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">UTS Map Lab</string>
     <!-- String baru untuk deskripsi foto -->
     <string name="photo_desc">Photo from history</string>
+    <string name="timestamp">Timestamp</string>
 </resources>
